--- a/src/Components/DealCards.css
+++ b/src/Components/DealCards.css
@@ -3,8 +3,9 @@
   width: 70%;
   height: auto;
   border-radius: 5px;
-  margin: 10px;
   padding: 20px 30px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .dealCardsComponent .cardHeader,
@@ -67,5 +68,6 @@
 @media only screen and (max-width: 600px) {
   .dealCardsComponent {
     width: 100%;
+    padding: 20px 5px;
   }
 }
