--- a/src/Components/DealCards.css
+++ b/src/Components/DealCards.css
@@ -6,6 +6,7 @@
   padding: 20px 30px;
   margin-top: 5px;
   margin-bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .dealCardsComponent .cardHeader,
@@ -33,11 +34,29 @@
   margin-right: 10px;
 }
 
+.dealCardsComponent .cardBody .dealTitle {
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.dealCardsComponent .cardBody .dealPrice {
+  font-weight: 700;
+  color: red;
+}
+
 .dealCardsComponent .cardBody img {
   display: block;
   margin: 10px auto;
   height: auto;
   width: 100%;
+  -webkit-box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 75%);
+  -moz-box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 75%);
+  box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 75%);
+}
+
+.dealCardsComponent .cardFooter {
+  text-align: center;
+  display: block;
 }
 
 .dealCardsComponent .cardFooter .myButton {
@@ -56,6 +75,11 @@
   text-shadow: 0px 1px 0px #2f6627;
   height: 40px;
 }
+
+.dealCardsComponent .buttonText {
+  color: white;
+}
+
 .dealCardsComponent .cardFooter .myButton:hover {
   background-color: #5cbf2a;
 }
@@ -67,7 +91,8 @@
 
 @media only screen and (max-width: 600px) {
   .dealCardsComponent {
-    width: 100%;
+    width: 95%;
     padding: 20px 5px;
+    margin: 10px auto;
   }
 }
