Added a no image message to deals/centered position of message and images in Carousel.jsx

--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -28,6 +28,11 @@
   align-items: center;
 }
 
+.cardComponent .cardBody .noImage p {
+  text-align: center;
+  text-decoration: underline;
+}
+
 .cardComponent .cardFooter {
   display: flex;
   justify-content: space-between;
