--- a/src/Components/MainNav.css
+++ b/src/Components/MainNav.css
@@ -1,3 +1,12 @@
 .mainNavComponent #dropMenu {
     width: 50px;
 }
+
+.load-more {
+    text-align: center;
+}
+
+.load-more button {
+    margin-bottom: 40px;
+    font-size: 2em;
+}
