--- a/src/Components/MainBody.css
+++ b/src/Components/MainBody.css
@@ -3,9 +3,17 @@
   margin: auto;
 }
 
+.mainBodyComponent .loadMore {
+  width: 70%;
+}
+
 @media only screen and (max-width: 600px) {
   .mainBodyComponent {
     width: 100%;
     margin: 0;
+  }
+
+  .mainBodyComponent .loadMore {
+    width: 100%;
   }
 }
