--- a/src/Components/AddLike.css
+++ b/src/Components/AddLike.css
@@ -8,3 +8,9 @@
     outline: none;
     background-color: inherit;
 }
+
+@media only screen and (max-width: 600px) {
+    .addLikeContainer .MuiButton-root {
+        min-width: 35px;
+    }
+}
