Added list of users deals in MyAccount/Added can delete own deals in MyAccount/Added confirmation message when deleting a deal/Improved minor design

--- a/src/Components/MainBody.css
+++ b/src/Components/MainBody.css
@@ -3,7 +3,15 @@
   margin: auto;
 }
 
+.mainBodyComponent .mainBodyCards {
+  margin-bottom: 30px;
+}
+
 .mainBodyComponent .loadMore {
+  width: 70%;
+}
+
+.mainBodyComponent .deleteButton {
   width: 70%;
 }
 
@@ -14,6 +22,10 @@
   }
 
   .mainBodyComponent .loadMore {
+    width: 100%;
+  }
+
+  .mainBodyComponent .deleteButton {
     width: 100%;
   }
 }
