--- a/src/Components/MainBody.css
+++ b/src/Components/MainBody.css
@@ -11,8 +11,12 @@
   width: 70%;
 }
 
-.mainBodyComponent .deleteButton {
-  width: 70%;
+.mainBodyComponent .deleteDealButton {
+  width: 35%;
+}
+
+.mainBodyComponent .validateDealButton {
+  width: 35%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -25,7 +29,11 @@
     width: 100%;
   }
 
-  .mainBodyComponent .deleteButton {
+  .mainBodyComponent .deleteDealButton {
+    width: 100%;
+  }
+
+  .mainBodyComponent .validateDealButton {
     width: 100%;
   }
 }
