Add: User can change is profil picture

--- a/src/Components/DealCards.css
+++ b/src/Components/DealCards.css
@@ -22,7 +22,7 @@
 }
 
 .dealCardsComponent .cardHeader .userInfos img {
-  border: solid 1px cadetblue;
+  border: solid 1px lightgrey;
   border-radius: 50%;
   height: 50px;
   width: 50px;
