Fixed: Profile Picture ratio

--- a/src/Components/MyAccount.css
+++ b/src/Components/MyAccount.css
@@ -4,6 +4,7 @@
 
 .myAccountComponent .headerInfos img {
     height: 100px;
+    width: 100px;
     border: 2px solid lightgrey;
     border-radius: 50%;
 }
