Centered feed. Added login with Google. Added Styled Components.

--- a/src/Components/MainBody.css
+++ b/src/Components/MainBody.css
@@ -1,13 +1,13 @@
-.mainBodyComponent {
+/* .mainBodyComponent {
   width: 70%;
   margin: auto;
-}
+} */
 
-.mainBodyComponent .mainBodyCards {
+/* .mainBodyComponent .mainBodyCards {
   margin-bottom: 30px;
-}
+} */
 
-.mainBodyComponent .loadMore {
+/* .mainBodyComponent .loadMore {
   width: 70%;
 }
 
@@ -36,4 +36,4 @@
   .mainBodyComponent .validateDealButton {
     width: 100%;
   }
-}
+} */
